[package]
name = "file-organizer"
version = "0.1.0"
edition = "2021"
authors = ["Paulo Sérgio do Nascimento <paulosergionas@gmail.com>"]
repository = "https://github.com/paulobazooka/midia-file-organizer"

[[bin]]
name = "fior"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
colored = "2.0.0"
